# tg_download

./: .env.example  .gitignore  README.md  check_results.py  check_task.py  config.example.yaml  debug_reaction.py  pyproject.toml  test_assets.py  test_reaction_listener.py  tg-download-backup.service.example  tg-download-backup.timer.example  tg-download.service.example
docs/: OFFLINE_DEDUPE.md  deploy.md
docs/superpowers/specs/: 2026-04-18-tg-restricted-video-downloader-design.md  2026-05-09-group-media-deduplication-design.md
scripts/: add_db_indexes.py  backup_db.sh  check_config_update.py  deploy.sh  export_for_offline.py  import_results.py  offline_dedupe.py  optimize-tcp.sh  start.sh  update_remote.sh  view_remote_logs.sh
src/: bot_handler.py  cache.py  chunked_downloader.py  cli.py  client.py  config.py  connection_pool.py  database.py  dedupe_scheduler.py  deduplicator.py  downloader.py  image_similarity.py  limiter.py  monitor.py  monitoring.py  monitoring_db.py  nas_sync.py  reaction_monitor.py  thumbnail_store.py  utils.py  webdav_server.py
static/dashboard/: dashboard.js  index.html
tests/: test_bot_handler.py  test_cache.py  test_chunked_downloader.py  test_cli.py  test_client.py  test_config.py  test_connection_pool.py  test_database.py  test_deduplicator.py  test_download_queue.py  test_downloader.py  test_image_similarity.py  test_limiter.py  test_monitor.py  test_monitoring.py  test_reaction_monitor.py  test_two_level_dedupe.py  test_utils.py  test_webdav_server.py
web/: package-lock.json  package.json
web/src/: App.tsx  main.tsx
(+9 files in other folders)
